geotools java 11 care and feeding
Signed-off-by: Jody Garnett <jody.garnett@gmail.com>